Tue Dec 17 05:14:35 2013  Eric Hodel  <drbrain@segment7.net>

	* NEWS (RDoc):  Update version number so I don't have to change it
	  for the final release.

Mon Dec 16 19:19:19 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): should check special_const_p
	  first (by is_markable_object()).

Mon Dec 16 19:12:54 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (reachable_object_from_root_i): use
	  compare_by_identity hash to avoid hash modify problem
	  during iteration.
	  [Bug #9252]

	* ext/objspace/objspace.c (reachable_objects_from_root): ditto.

Mon Dec 16 18:16:28 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_verify_internal_consistency): should not use
	  rb_objspace_each_objects() because it call rest_sweep().

Mon Dec 16 18:07:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): fix last commit (build error).

Mon Dec 16 18:04:28 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_markable_object_p): it should be live objects.

Mon Dec 16 18:00:51 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_each_objects): should not clear dont_lazy_sweep
	  flag in nested case.

Mon Dec 16 16:40:35 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_method_entry_make): fix WB miss.
	  Note that rb_method_entry_t::klass is not constified.
	  We may  constify this field.

	* test/ruby/test_alias.rb: add a test.

Mon Dec 16 14:14:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use gc_verify_internal_consistency() instead of
	  gc_check_before_marks_i() for check consistency
	  on RGENGC_CHECK_MODE >= 2.

Mon Dec 16 14:01:48 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (make_clock_result): add :second as a unit for
	  Process.clock_gettime.

Mon Dec 16 13:10:54 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce GC.verify_internal_consistency method to verify GC
	  internal data structure.
